@@ -1,3 +1,9 @@
+2007-03-07  Andreas Kupries  <andreask@activestate.com>
+
+	* compiler_peg_mecpu.tcl: Fixed typo in name of required package
+	* pkgIndex.tcl:           ('gasm;, was incorrectly 'gas'). Bumped
+	                          to version 0.1.1.
+
 2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
